--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>no.ssb.dapla.secrets</groupId>
     <artifactId>dapla-secrets-client-api</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0</version>
     <packaging>jar</packaging>
 
     <name>Dapla Secrets Client API</name>
@@ -40,7 +40,7 @@
         <developerConnection>scm:git:git@github.com:statisticsnorway/dapla-secrets-client-api.git
         </developerConnection>
         <url>https://github.com/statisticsnorway/dapla-secrets-client-api/tree/master</url>
-        <tag>HEAD</tag>
+        <tag>v0.4.0</tag>
     </scm>
 
     <dependencies>
